--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "db:down": "docker-compose down",
     "db:reset": "docker-compose down -v && docker-compose up -d",
     "db:seed": "cd packages/database && npm run db:seed",
-    "db:reinit": "npm run db:reset && sleep 5 && docker exec -it supply-chain-postgres bash -c \"psql -U postgres -c 'DROP DATABASE IF EXISTS supply_chain;' && psql -U postgres -c 'CREATE DATABASE supply_chain;'\" && cd packages/database && npm run db:migrate && npm run db:seed",
-    "prepare": "husky install"
+    "db:reinit": "npm run db:reset && sleep 5 && docker exec -it supply-chain-postgres bash -c \"psql -U postgres -c 'DROP DATABASE IF EXISTS supply_chain;' && psql -U postgres -c 'CREATE DATABASE supply_chain;'\" && cd packages/database && npm run db:migrate && npm run db:seed"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -35,7 +34,6 @@
     "bcrypt": "^5.1.1",
     "concurrently": "^8.2.2",
     "eslint": "^8.0.0",
-    "husky": "^8.0.0",
     "lint-staged": "^15.4.3",
     "prettier": "^3.0.0",
     "ts-node": "^10.9.2",
