--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "version": 2,
   "framework": "nextjs",
-  "buildCommand": "npm install && node scripts/prepare-vercel-deploy.js && cd apps/web && npm run build",
+  "buildCommand": "node scripts/prepare-vercel-deploy.js && cd apps/web && npm install && npm run build",
   "devCommand": "npm run dev",
   "installCommand": "npm install",
   "outputDirectory": "apps/web/.next",
