--- a/apps/web/vercel.json
+++ b/apps/web/vercel.json
@@ -1,7 +1,7 @@
 {
   "version": 2,
   "framework": "nextjs",
-  "buildCommand": "npm run build",
+  "buildCommand": "npm install --include=dev && npm run build",
   "installCommand": "npm install",
   "outputDirectory": ".next",
   "regions": ["iad1"],
