Update vercel.json to fix NextAuth API routes

--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,10 @@
   "devCommand": "npm run dev",
   "installCommand": "npm install",
   "outputDirectory": "apps/web/.next",
-  "rewrites": [{ "source": "/(.*)", "destination": "/apps/web/$1" }],
+  "rewrites": [
+    { "source": "/api/auth/:path*", "destination": "/api/auth/:path*" },
+    { "source": "/api/:path*", "destination": "/api/:path*" },
+    { "source": "/(.*)", "destination": "/$1" }
+  ],
   "ignoreCommand": "git diff --quiet HEAD^ HEAD ./apps/web/"
 }
