--- a/apps/api/fly.staging.toml
+++ b/apps/api/fly.staging.toml
@@ -10,7 +10,7 @@ primary_region = "syd"
   internal_port = 3001
   force_https = true
   auto_stop_machines = true
-  auto_start_machines = true
+  auto_start_machines = false
   min_machines_running = 0
   processes = ["app"]
   
