--- a/.github/workflows/deploy-api-flyio-build.yml
+++ b/.github/workflows/deploy-api-flyio-build.yml
@@ -57,7 +57,7 @@ jobs:
         run: |
           cat > Dockerfile << EOL
           # Build stage
-          FROM node:23.9-alpine AS builder
+          FROM nestjs/cli:11-alpine AS builder
 
           # Set working directory
           WORKDIR /app
@@ -81,11 +81,8 @@ jobs:
           # Build API
           RUN cd apps/api && npm run build
 
-          # Remove dev dependencies
-          RUN npm prune --production
-
           # Runtime stage
-          FROM node:23.9-alpine
+          FROM nestjs/cli:11-alpine
 
           # Install OpenSSL for Prisma
           RUN apk add --no-cache openssl
@@ -93,17 +90,21 @@ jobs:
           # Set working directory
           WORKDIR /app
 
-          # Copy built files and production dependencies
-          COPY --from=builder /app/package.json /app/package-lock.json ./
-          COPY --from=builder /app/node_modules ./node_modules
-          COPY --from=builder /app/apps/api/package.json ./apps/api/
+          # Copy package files
+          COPY package.json package-lock.json ./
+          COPY apps/api/package.json ./apps/api/
+          COPY packages/database/package.json ./packages/database/
+          COPY packages/shared/package.json ./packages/shared/
+          COPY packages/ui/package.json ./packages/ui/
+
+          # Install production dependencies
+          RUN npm ci --only=production
+
+          # Copy built files from builder
           COPY --from=builder /app/apps/api/dist ./apps/api/dist
-          COPY --from=builder /app/packages/database/package.json ./packages/database/
           COPY --from=builder /app/packages/database/dist ./packages/database/dist
           COPY --from=builder /app/packages/database/prisma ./packages/database/prisma
-          COPY --from=builder /app/packages/shared/package.json ./packages/shared/
           COPY --from=builder /app/packages/shared/dist ./packages/shared/dist
-          COPY --from=builder /app/packages/ui/package.json ./packages/ui/
           COPY --from=builder /app/packages/ui/dist ./packages/ui/dist
 
           # Generate Prisma client
